--- a/composer.json
+++ b/composer.json
@@ -17,17 +17,19 @@
     }
   ],
   "license": [
-    "GPL-2.0+"
+    "GPL-2.0-or-later"
   ],
   "require": {
-    "typo3/cms-core": ">=8.6.0,<9.2.0"
+    "typo3/cms-core": "^10.4.0"
   },
   "autoload": {
     "psr-4": {
       "DanielGoerz\\JsonExample\\": "Classes"
     }
   },
-  "replace": {
-    "json_example": "self.version"
+  "extra": {
+    "typo3/cms": {
+      "extension-key": "json_example"
+    }
   }
 }
